IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
9/17/13: Fixed right-click menu in eTomo - Fiducial Model Dialog.(Bug# 1683)

9/17/13: Resolved problems with the project log window.(Bug# 1690, Bug# 1616)

9/4/13: Added SloppyMontage parameter to blend.com in eTomo - Serial Sections.
(Bug# 1742)

9/3/13: Added option to Edpiecepoint to create list ordered first by Z.

9/3/13: Added warping to the xfalign interface in eTomo - Serial Sections.
(Bug# 1731)

9/1/13: In Tiltalign, made robust fitting try not to get stuck in
oscillations, and made it restore non-robust fit upon failure.

8/30/13: IMOD_4-6-29
8/30/13: Changed options to drop and ignore models in Autofidseed to take
lists numbered from 1, not 0.

8/30/13: In Pickbestseed, implemented a new analysis of whether beads are
elongated and tuned the parameters with a variety of data sets.  It will now
identify many fewer beads as elongated inappropriately when they are over a
dense background.  Autofidseed and Pickbestseed now allow the elongated points
to be included without the clustered ones and generate a model of all
candidate beads color-coded by elongation and clustering.

8/30/13: Added option to Genhstplt to form linear combination of columns.

8/27/13: Improved tooltips for eTomo - PEET.(Bug# 1740)

8/27/13: Added complete version information to the etomo error log file.
(Bug# 1733)

8/27/13: Added a bidirectional tilt series option to eTomo - Setup Tomogram.
(Bug# 1732)

8/24/13: IMOD_4-6-28
8/24/13: Improved the layout, behavior, labels, and tooltips of the "Align
Serial Sections / Blend Montages" interface.(Bug# 1730)

8/23/13: There are now two system templates that can be selected in the eTomo
startup page; plasticSection just turns on Sobel filter centering in tracking;
cyoSample turns that on with the correct filter and changes a few other
settings; see Using Etomo for details.

8/23/13: Fixed Tiltxcorr to compute warping with a seed point model.
