@@ -10,10 +10,10 @@ wait.process.finishjoin=done
 [[if = test-gui]]
 	assert.ge.tf.size-in-x=818
 	assert.le.tf.size-in-x=820
-	assert.ge.tf.y=592
+	assert.ge.tf.y=590
 	assert.le.tf.y=596
 	assert.ge.tf.shift-in-x=-9
-	assert.le.tf.shift-in-x=-7
+	assert.le.tf.shift-in-x=-6
 	assert.ge.tf.y.1=-12
 	assert.le.tf.y.1=-7
 	bn.trial-join=
